--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,6 @@
         <div class="title-header">
           <h1>OPEN CRYPTOCHAT</h1>
           <h2>A minimalist, open-source, end-to-end encrypted chat application.</h2>
-          <p>Disclaimer - This website is part of a tutorial on end-to-end webapp encryption, and is intended to be used as a learning resource. Please do not use it to share sensitive information.</p>
-          <p class="yellow">To learn how to build your own encrypted chat app, check out the <a class="blog-plug" target="_blank" rel="noopener" href="https://blog.patricktriest.com">tutorial</a>.</p>
         </div>
         <div class="message-list">
           <div class="message full-width" v-for="message in messages">
@@ -32,6 +30,12 @@
       <div class="room-select">
         <input type="text" class="full-width" placeholder="Room Name" id="room-input" v-model="pendingRoom" @keyup.enter="joinRoom()">
         <input class="yellow-button full-width" type="submit" v-on:click="joinRoom()" value="JOIN">
+      </div>
+      <div class="divider"></div>
+      <h1>USER NAME</h1>
+      <div class="user-select">
+        <input type="text" class="full-width" placeholder="User name" id="user-input" v-model="pendingUser" @keyup.enter="joinUser()">
+        <input class="yellow-button full-width" type="submit" v-on:click="joinUser()" value="NAME">
       </div>
       <div class="divider"></div>
       <div class="notification-list" ref="notificationContainer">
